<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Where.IM</string>
    <string name="lang">en</string>
    <string name="google_lang">en</string>
    <string name="permission_rationale">Your location will be continually sent to your active channels, for location sharing and other remote location-based events. As long as you have any channels active, location update continues to work, even when this app enters background, so you can use other app like navigation app or facebook or just lock your phone and take a nap, and keep your friends or families knowing where you are in the meantime.</string>
    <string name="need_location_permission">Need location permission</string>
    <string name="action_share">Share</string>
    <string name="action_invite">Invite</string>
    <string name="action_guest_view">Guest View</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_quit">Quit</string>
    <string name="active_client">Client not active</string>
    <string name="active_client_message">This client is not active, take over from your other client?</string>
    <string name="account">Account</string>
    <string name="logout">Logout %1$s</string>
    <string name="reset_tips">Show tips again</string>
    <string name="service_provider">Service Provider (Map &amp; Search)</string>
    <string name="misc">Miscellaneous</string>
    <string name="got_it">GOT IT</string>
    <string name="tip_new_channel">Tap here to create new channel or join with QR code.</string>
    <string name="tip_enter_channel">Tap to enter channel view.</string>
    <string name="tip_toggle_channel">Tap here to activate/deactivate sending location data to this channel.</string>
    <string name="tip_toggle_channel_2">Same as the switch in channel list, tap here to toggle sending location data to this channel.</string>
    <string name="tip_invite">Tap to invite others to this channel.</string>
    <string name="location_status">Location status</string>
    <string name="location_status_not_avail">Not available</string>
    <string name="location_status_stale">Stale, last known location</string>
    <string name="location_status_fresh">Fresh or forged location</string>
    <string name="detection">Detection</string>
    <string name="off">Off</string>
    <string name="active">Active</string>
    <string name="mobile_geofence">Mobile geofence</string>
    <string name="mobile_geofence_desc">Notify when mates approach to or get away from you by certain distance.</string>
    <string name="fixed_geofence">Fixed geofence</string>
    <string name="fixed_geofence_desc">Notify when mates enter or leave a particular area.</string>
    <string name="error">Error</string>
    <string name="retry">Retry</string>
    <string name="date_format">%1$s %2$s</string>
    <string name="invitation">Invitation: %1$s</string>
    <string name="guest_view_link_for">Guest view link for %1$s</string>
    <string name="object_create_hint">Long press on map to create</string>
    <string name="mate_invite_hint">No one here, invite others to this channel</string>
    <string name="no_match">No match</string>
    <string name="share_location">Share my location</string>
    <string name="name">Name</string>
    <string name="icon">Icon</string>
    <string name="desc">Description</string>
    <string name="mock">Mock</string>
    <string name="channel_name">Channel Name</string>
    <string name="user_channel_name">Channel Alias</string>
    <string name="display_name">Display Name</string>
    <string name="create_channel">Create Channel</string>
    <string name="join_channel">Join Channel</string>
    <string name="edit_channel">Edit Channel</string>
    <string name="quit_channel">Leave Channel</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="open_in_channel">Open in Channel</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="send_invite_link">Send Invite Link</string>
    <string name="open_in">Open in</string>
    <string name="share">Share</string>
    <string name="create_enchantment">New Geofence</string>
    <string name="create_marker">New Marker</string>
    <string name="forge_location">Forge Location</string>
    <string name="clear">Clear</string>
    <string name="save_marker">Save Marker</string>
    <string name="radius_m">%1$d m</string>
    <string name="self">Self</string>
    <string name="mate">Mate</string>
    <string name="is_public">Shared</string>
    <string name="only_me">Only Me</string>
    <string name="public_enchantment">Shared Geofence</string>
    <string name="private_enchantment">Personal Geofence</string>
    <string name="public_marker">Shared Marker</string>
    <string name="private_marker">Personal Marker</string>
    <string name="error_exhausted">Client capacity is exhausted, please try later.</string>
    <string name="connecting">Connecting</string>
    <string name="confirm">Confirm</string>
    <string name="copy">Copy</string>
    <string name="report_inappropriate">Report inappropriate content</string>
    <string name="report">Report</string>
    <string name="message_deleted">This message has been deleted</string>
    <string name="message_hidden">This message has been hidden</string>
    <string name="guest_view">Guest View</string>
    <string name="access_settings">Access Settings</string>
    <string name="messages">Messages</string>
    <string name="send">Send</string>
    <string name="unread">Unread</string>
    <string name="begin_sharing">Notify others you have begun sharing location</string>
    <string name="message_not_implemented">Require new version to display this message</string>
    <string name="message_geofence_create">Geofence %1$s is created.</string>
    <string name="message_geofence_emerge">Emerged in geofence %1$s.</string>
    <string name="message_geofence_in">Entered geofence %1$s.</string>
    <string name="message_geofence_out">Left geofence %1$s.</string>
    <string name="message_enchantment_create">Geofence %1$s is created.</string>
    <string name="message_enchantment_emerge">Emerged in geofence %1$s.</string>
    <string name="message_enchantment_in">Entered geofence %1$s.</string>
    <string name="message_enchantment_out">Left geofence %1$s.</string>
    <string name="message_marker_create">Marker %1$s is created.</string>
    <string name="message_radius_report">In/Out: %1$s / %2$s (%3$s m)</string>
    <string name="fcm_begin_sharing">%1$s just begins sharing location with you !</string>
    <string name="fcm_text">%1$s: %2$s</string>
    <string name="fcm_rich">%1$s: %2$s</string>
    <string name="fcm_image">%1$s has uploaded an image</string>
    <string name="fcm_enchantment_create">%1$s: Geofence %2$s is created.</string>
    <string name="fcm_enchantment_emerge">%1$s: Emerged in geofence %2$s.</string>
    <string name="fcm_enchantment_in">%1$s: Entered geofence %2$s.</string>
    <string name="fcm_enchantment_out">%1$s: Left geofence %2$s.</string>
    <string name="fcm_geofence_create">%1$s: Geofence %2$s is created.</string>
    <string name="fcm_geofence_emerge">%1$s: Emerged in geofence %2$s.</string>
    <string name="fcm_geofence_in">%1$s: Entered geofence %2$s.</string>
    <string name="fcm_geofence_out">%1$s: Left geofence %2$s.</string>
    <string name="fcm_marker_create">%1$s: Marker %2$s is created.</string>
    <string name="fcm_radius_report">In/Out: %1$s / %2$s (%3$s m)</string>
    <string name="message_limit_active_channel">Limit of number of active channels (%1$s) is reached.</string>
    <string name="message_limit_enabled_channel">Limit of number of enabled channels (%1$s) is reached, long press on channel list and tap the lock icon to disable some channels.</string>
    <string name="google_maps">Google Maps</string>
    <string name="google_maps_navigation">Google Maps - Navigation &amp; Transit</string>
</resources>
