<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <Button
        android:id="@+id/open_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_in"/>

    <Button
        android:id="@+id/share_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_location"/>

    <Button
        android:id="@+id/create_enchantment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_enchantment"/>

    <Button
        android:id="@+id/create_marker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_marker"/>

    <Button
        android:id="@+id/forge_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forge_location"/>

</LinearLayout>
