<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:columnCount="2"
    android:rowCount="3">

    <TextView
        android:text="@string/name"
        android:layout_column="0"
        android:layout_row="0" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_column="1"
        android:layout_row="0"
        android:ems="10"
        android:id="@+id/name" />

    <TextView
        android:text="@string/access_settings"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_columnSpan="2" />

    <CheckBox
        android:id="@+id/access_messages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/messages"
        android:layout_row="2"
        android:layout_column="1" />

</GridLayout>
