<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewChannelActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="3">

            <TextView
                android:text="@string/channel_name"
                android:layout_column="0"
                android:layout_row="0" />

            <TextView
                android:text="@string/display_name"
                android:layout_column="0"
                android:layout_row="1" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:layout_column="1"
                android:layout_row="0"
                android:ems="10"
                android:id="@+id/channel_name" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:layout_column="1"
                android:layout_row="1"
                android:id="@+id/mate_name" />

            <Button
                android:id="@+id/create_channel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:text="@string/create_channel" />

        </GridLayout>

        <TextView
            android:id="@+id/scan_qr_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:text="@string/scan_qr_code"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>